# rust_static_link

./: 01_test_rust_lib.sh  02_test_c_lib.sh  03_test_rust_wrap.sh  04_test_rust_end_user.sh  README.md
c_lib/: c_lib.c  c_lib.h  main.c
rust_end_user/: Cargo.toml  example.rs  main.rs  test.rs
rust_lib/: Cargo.toml  example.rs  main.rs  rust_lib.h  rust_lib.rs  test.rs
rust_wrap/: Cargo.toml  build.rs  example.rs  main.rs  rust_wrap.rs  test.rs
